Fixed layout issue of login page.

--- a/src/app/users/users-sign-in/users-sign-in.component.scss
+++ b/src/app/users/users-sign-in/users-sign-in.component.scss
@@ -95,6 +95,9 @@ $error-red: #e94e4c;
 .login-main {
   min-height: 600px;
   height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .logged-in-spinner {
